# teamvault

./: .env.example  .gitignore  DEPLOY-HEROKU-VERCEL.md  Makefile  QUICKSTART.md  README.md  build-backend.bat  deploy.bat  deploy.sh  docker-compose.yml  heroku.yml  render.yaml
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 0001_create_users.sql  0002_create_workspaces.sql  0003_create_channels.sql  0004_create_direct_messages.sql  0005_create_messages.sql  0006_create_call_sessions.sql  0007_create_refresh_tokens.sql
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/dto/: auth.rs  call.rs  channel.rs  message.rs  mod.rs  user.rs  workspace.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: call_session.rs  channel.rs  message.rs  mod.rs  user.rs  workspace.rs
backend/src/routes/: auth.rs  calls.rs  channels.rs  direct_messages.rs  files.rs  messages.rs  mod.rs  users.rs  workspaces.rs  ws.rs
backend/src/services/: auth_service.rs  call_service.rs  channel_service.rs  message_service.rs  mod.rs  user_service.rs  workspace_service.rs
backend/src/util/: hash.rs  mod.rs  pagination.rs
coturn/: turnserver.conf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/electron/: main.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  calls.ts  client.ts  directMessages.ts  (+4 more)
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: dev.sh  seed.sql
sfu/: Dockerfile  go.mod  go.sum  main.go
(+32 files in other folders)
